--- a/ViBE-web-application/src/app/sidenav/sidenav.component.html
+++ b/ViBE-web-application/src/app/sidenav/sidenav.component.html
@@ -1,1 +1,11 @@
-<p>sidenav works!</p>
+<mat-sidenav-container class="example-container" *ngIf="shouldRun">
+        <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav>
+        <mat-sidenav-content>Main content</mat-sidenav-content>
+      </mat-sidenav-container>
+      
+      <div *ngIf="!shouldRun">Please open on Stackblitz to see result</div>
+      
+      
+      <!-- Copyright 2019 Google LLC. All Rights Reserved.
+          Use of this source code is governed by an MIT-style license that
+          can be found in the LICENSE file at http://angular.io/license -->
