added top nav component

--- a/ViBE-web-application/src/app/app.component.html
+++ b/ViBE-web-application/src/app/app.component.html
@@ -337,7 +337,7 @@
 </style>
 
 <!-- Toolbar -->
-<div class="toolbar" role="banner">
+<!-- <div class="toolbar" role="banner">
     <img
       width="40"
       alt="Angular Logo"
@@ -346,13 +346,12 @@
     
     <span>Welcome</span>
       <div class="spacer"></div>
-    
+  
+  </div> -->
 
-    
-    
-  </div>
+  <app-navbar></app-navbar>
   <div class="content" role="main">
-
+  
      <!-- Side navigation -->
 <div class="sidenav">
     <a href="#">About</a>
@@ -365,7 +364,7 @@
             
           
           
-             
+            
            
            <circle cx="50" cy="50" r="20" fill="#FFA500">
              
