--- a/ViBE-web-application/src/app/app.component.html
+++ b/ViBE-web-application/src/app/app.component.html
@@ -359,7 +359,7 @@
     <a href="#">Clients</a>
     <a href="#">Contact</a>
   </div>
-      <svg width="510px" height="500px" viewBox="0 0 510 500">
+      <!-- <svg width="510px" height="500px" viewBox="0 0 510 500">
           <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128.59 69.02"><defs><style>.cls-1{font-size:61px;fill:#932830;font-family:Nunito-Black, Nunito Black;font-weight:800;letter-spacing:-0.07em;}.cls-2{fill:#ffdf57;}.cls-3{fill:#fff794;}</style></defs><title>vibe logo still</title><text class="cls-1" transform="translate(0 52)">V BE</text><path class="cls-2" d="M54.9,68.53a4.53,4.53,0,0,1-1.56-3.75v-21A4.52,4.52,0,0,1,54.9,40a6.62,6.62,0,0,1,7.74,0,4.52,4.52,0,0,1,1.56,3.75v21a4.53,4.53,0,0,1-1.56,3.75,6.62,6.62,0,0,1-7.74,0Z" transform="translate(-6.75 -17.41)"/><path class="cls-3" d="M58.77,38.79A6,6,0,0,0,54.9,40a3.93,3.93,0,0,0-1.17,1.56,5.08,5.08,0,0,0-.39,1.73v3.51a1.38,1.38,0,0,0,2.76,0V44h0a.49.49,0,1,1,1,0h0a1.7,1.7,0,0,0,3.38,0h0a.73.73,0,0,1,1.45,0h0v4.57a1.15,1.15,0,1,0,2.29,0V43.79A4.52,4.52,0,0,0,62.64,40,6,6,0,0,0,58.77,38.79Z" transform="translate(-6.75 -17.41)"/></svg>
             
           
@@ -384,7 +384,7 @@
              <animate attributeName="cy" values="220;570" begin="0.4s" dur="2s" repeatCount="indefinite" />
            </circle>
           
-         </svg>
+         </svg> -->
 
   </div>
 
