--- a/ViBE-web-application/src/app/navbar/navbar.component.html
+++ b/ViBE-web-application/src/app/navbar/navbar.component.html
@@ -1,2 +1,34 @@
-<p>this is where the top nave will go</p>
-  <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
+<mat-toolbar color="warn">  
+    <mat-toolbar-row >
+            <svg width="200px" height="100px" viewBox="0 0 510 500">
+                    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128.59 69.02"><defs><style>.cls-1{font-size:61px;fill:#932830;font-family:Nunito-Black, Nunito Black;font-weight:800;letter-spacing:-0.07em;}.cls-2{fill:#ffdf57;}.cls-3{fill:#fff794;}</style></defs><title>vibe logo still</title><text class="cls-1" transform="translate(0 52)">V BE</text><path class="cls-2" d="M54.9,68.53a4.53,4.53,0,0,1-1.56-3.75v-21A4.52,4.52,0,0,1,54.9,40a6.62,6.62,0,0,1,7.74,0,4.52,4.52,0,0,1,1.56,3.75v21a4.53,4.53,0,0,1-1.56,3.75,6.62,6.62,0,0,1-7.74,0Z" transform="translate(-6.75 -17.41)"/><path class="cls-3" d="M58.77,38.79A6,6,0,0,0,54.9,40a3.93,3.93,0,0,0-1.17,1.56,5.08,5.08,0,0,0-.39,1.73v3.51a1.38,1.38,0,0,0,2.76,0V44h0a.49.49,0,1,1,1,0h0a1.7,1.7,0,0,0,3.38,0h0a.73.73,0,0,1,1.45,0h0v4.57a1.15,1.15,0,1,0,2.29,0V43.79A4.52,4.52,0,0,0,62.64,40,6,6,0,0,0,58.77,38.79Z" transform="translate(-6.75 -17.41)"/></svg>
+                
+                     <circle cx="50" cy="50" r="20" fill="#FFA500">
+                       
+                       <animate attributeName="cy" values="165;170;165" begin="0.2s" dur="1s" repeatCount="indefinite" />
+                       <animate attributeName="cx" values="203;208;203" begin="0.5s" dur="1s" repeatCount="indefinite" />
+                       <animate attributeName="fill" values="#FFA500;#ffd105;#ffb412" begin="0.4s" dur=".3s" repeatCount="indefinite" />
+                     </circle>
+                     <circle cx="50" cy="50" r="20" fill="#FFA500">
+                       
+                       <animate attributeName="cy" values="165;170;165" begin="0.4s" dur="1s" repeatCount="indefinite" />
+                       <animate attributeName="cx" values="203;208;203" begin="0.2s" dur="1s" repeatCount="indefinite" />
+                       <animate attributeName="fill" values="#FFA500;#ffd105;#ffb412" begin="0.4s" dur=".3s" repeatCount="indefinite" />
+                     </circle>
+                     
+                     <circle cx="223" cy="50" r="5" fill="#FFF794">
+                       
+                       <animate attributeName="cy" values="220;570" begin="0.4s" dur="2s" repeatCount="indefinite" />
+                     </circle>
+                    
+                   </svg>
+        <div class="nav">
+            <button mat-raised-button>about</button>&nbsp; 
+            <button mat-raised-button>create event</button>&nbsp; 
+            <button mat-raised-button>login</button>&nbsp; 
+            <button mat-raised-button>logout</button>&nbsp; 
+        </div>
+    
+    </mat-toolbar-row>
+  
+  </mat-toolbar>
