--- a/ViBE-web-application/src/app/app.component.html
+++ b/ViBE-web-application/src/app/app.component.html
@@ -21,6 +21,7 @@
   </div> -->
 
   <app-navbar></app-navbar>
+  <app-map></app-map>
   <div class="content" role="main">
   
      <!-- Side navigation -->
@@ -68,8 +69,6 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
-<div #map style="width:100%;height:400px"></div>
 
 
 
