--- a/ViBE-web-application/src/app/components/navbar/navbar.component.html
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.html
@@ -23,7 +23,7 @@
                     
                    </svg>
         <div class="nav">
-            <button mat-raised-button>about</button>&nbsp; 
+            <button mat-raised-button (click)="postSomething()">about</button>&nbsp; 
             <button mat-raised-button>create event</button>&nbsp; 
             <button mat-raised-button>login</button>&nbsp; 
             <button mat-raised-button>logout</button>&nbsp; 
