--- a/ViBE-web-application/src/app/app.component.html
+++ b/ViBE-web-application/src/app/app.component.html
@@ -1,8 +1,15 @@
+
+
+  
+<app-splash-screen></app-splash-screen>
+   
 <div id="id_content">
+
   <div id="id_navbar">
       <app-navbar></app-navbar>
   </div>
 
+  <div id="test"></div>
   <div id="id_map">
       <app-map></app-map>
   </div>
