--- a/ViBE-web-application/src/app/splash-screen/splash-screen.component.html
+++ b/ViBE-web-application/src/app/splash-screen/splash-screen.component.html
@@ -3,7 +3,7 @@
     <div id="SplashBackground"></div>
     
     <div id="LogoContainer">
-        <img src ="./vibeLogo.png">
+        <img src ="/assets/images/vibeLogoMedium.png" alt="vibeLogo.png">
     </div>
     <button id="LoginButton" class="btn btn-primary bg-dark text-warning" (click)="onClick_Login()">Login</button>
 
