--- a/ViBE-web-application/src/app/splash-screen/splash-screen.component.css
+++ b/ViBE-web-application/src/app/splash-screen/splash-screen.component.css
@@ -13,7 +13,7 @@
     right: auto;
     width: 100%;
     height: 100%;
-    background-image: url("./splashScreen.jpg");
+    background-image: url("/assets/images/splashScreen.jpg");
     background-size: auto;
     opacity: 50%;
     filter: blur(1.2px) grayscale(100%);
@@ -21,8 +21,8 @@
 }
 #LogoContainer{
     position: absolute;
-    top: 0%;
-    left: 43%;
+    top: 10%;
+    left: 40%;
     z-index: 2;
 }
 #LoginButton{
@@ -32,4 +32,8 @@
     top: 80%;
     margin-top: -50px;
     z-index: 2;
+}
+img{
+    max-width: 100%;
+    max-height: 100%;
 }
