connection branch started

--- a/ViBE-web-application/src/app/splash-screen/splash-screen.component.html
+++ b/ViBE-web-application/src/app/splash-screen/splash-screen.component.html
@@ -23,7 +23,7 @@
   
       <div id="signup-form">
           <form>
-              <input type="email" placeholder="Enter your email"/>
+              <input type="email" placeholder="Enter your email" name="email" [(ngModel)]="model.email" #email="ngModel" required/>
               <input type="text" placeholder="Choose username"/>
               <input type="password" placeholder="Create password"/>
               <button type="button" class="btn signup">create account</button>
