--- a/ViBE-web-application/src/app/components/navbar/navbar.component.html
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="testtt">
-    <a class="navbar-brand text-warning" href="#">ViBE</a>
+    <!-- <a class="navbar-brand text-warning" href="#">ViBE</a> -->
+    <img src ="/assets/images/ViBE_noSpace.png" id="id-vibeLogo" alt="vibeLogo.png">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -23,7 +24,7 @@
           <a class="nav-link text-warning" href="#">About</a>
         </li>    
         
-        <!-- <div class="modal" id="modal-login" style="display:none">
+        <div class="modal" id="modal-createevent" style="display:none">
             <div class="modal-dialog" role="document">
               <div class="modal-content custom-ting">
                 <div class="modal-header custom-ting">
@@ -52,7 +53,7 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
       </ul>
       
       <!-- <form class="form-inline my-2 my-lg-0">
