--- a/ViBE-web-application/src/app/splash-screen/splash-screen.component.css
+++ b/ViBE-web-application/src/app/splash-screen/splash-screen.component.css
@@ -13,39 +13,31 @@
     right: auto;
     width: 100%;
     height: 100%;
-    background-image: url("/assets/images/splashScreen.jpg");
-    background-size: auto;
-    opacity: 50%;
-    filter: blur(1.2px) grayscale(100%);
-    z-index: 1;
+    background-image: url("/assets/images/splash1v2.jpg");
+    object-fit: scale-down;
+    opacity: 100%;
+    filter: blur(10px) grayscale(20%);
+    z-index: 2;
 }
 #LogoContainer{
     position: absolute;
-    top: 10%;
-    left: 40%;
-    z-index: 2;
-}
-#LoginButton{
-    position: absolute;
-    left: 50%;
-    margin-left: -50px;
-    top: 80%;
-    margin-top: -50px;
-    z-index: 2;
+    height: 30vh;
+    width: 30vw;
+    left: 48%;
+    top: 25%;
+    transform: translate(-50%, -50%);   
+    z-index: 3;
 }
 
 #modal-login {
     position: absolute;
+    /* width: 500px;
+    height: 500px; */
     left: 50%;
-    margin-left: -50px;
     top: 50%;
-    margin-top: -75px;
-    z-index: 2;
-}
-
-img{
-    max-width: 100%;
-    max-height: 100%;
+    transform: translate(-50%, -50%);   
+    z-index: 3;
+    border-radius: 20px;
 }
 
 
@@ -58,6 +50,14 @@ img{
 
 body{
     background:#fff;
+    height:100%;
+}
+
+img{
+    max-width: 100%;
+    max-height: 100%;
+    /* width: 350px;
+    height: 350px; */
 }
 
 .form-modal{
@@ -86,7 +86,7 @@ body{
 }
 
 .form-modal .btn{
-    border-radius: 20px;
+    border-radius: 20px;    
     border:none;
     font-weight: bold;
     font-size:1.2em;
@@ -98,12 +98,13 @@ body{
 }
 
 .form-modal .login , .form-modal .signup{
-    background:#57b846;
-    color:#fff;
+    background:#F0AD4E;
+    color:#343A40;
 }
 
 .form-modal .login:hover , .form-modal .signup:hover{
-    background:#222;
+    background:#343A40;
+    color:#F0AD4E;
 }
 
 .form-toggle{
@@ -134,8 +135,8 @@ body{
 }
 
 #login-toggle{
-    background:#57b846;
-    color:#ffff;
+    background:#F0AD4E;
+    color:#343A40;
 }
 
 .form-modal form{
