--- a/ViBE-web-application/src/app/splash-screen/splash-screen.component.html
+++ b/ViBE-web-application/src/app/splash-screen/splash-screen.component.html
@@ -1,9 +1,23 @@
-<div id="Splash">
-    
-    <div id="SplashBackground"></div>
-    
+<div id="Splash">    
     <div id="LogoContainer">
-        <img src ="/assets/images/vibeLogoMedium.png" alt="vibeLogo.png">
+        <!-- <img src ="/assets/images/ViBE_noSpace.png" alt="vibeLogo.png"> -->
+<svg enable-background="new 0 0 612.2 216.2" version="1.1" viewBox="0 0 612.2 216.2" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+     <style type="text/css">
+       .st0{fill:#F79E62;}
+       .st1{fill:#FEEB8C;}
+     </style>
+     <title>ViBE_noSpace</title>
+     <path class="st0" d="m328.4 199.1c-21 0-37.7-0.1-54.4 0.1-3.8 0-5-1-4.8-4.8 0.3-6.2 0.3-12.3 0-18.5-0.3-4.4 0.9-5.9 5.7-5.9 29.3 0.2 58.7 0.1 88 0 2.8 0.1 5.7-0.1 8.5-0.5 14-2.5 21-11.2 20.7-25.4-0.1-7.1-3.6-12.1-9.9-14.9-5.4-2.2-11.2-3.3-17.1-3.1-30.2 0-60.3-0.1-90.5 0.1-4 0-5.6-0.8-5.4-5.2 0.4-8.7 0.3-17.3 0-26-0.1-3.9 0.9-5.1 5-5.1 26.8 0.2 53.7 0.1 80.5 0.1 3.5 0.1 7-0.3 10.4-1.1 10.1-2.7 17.1-15 14.4-25.2-1-4-3.8-7.2-7.5-8.8-4.9-2.1-10.2-3.1-15.6-2.9-27.3 0-54.7-0.1-82 0.1-4.3 0-5.3-1.3-5.2-5.3 0.3-8.8 0.1-17.7-0.1-26.5-0.1-3.1 0.6-4.4 4.1-4.4 31.3 0.1 62.7-0.2 94 0.2 25.3 0.3 43.1 16.9 47 42.5 1.5 10 1.4 19.9-1.7 29.6-1.4 4.5-3.5 8.8-7 11.9-2.5 2.2-2.6 3.4 0.3 5.5 9.9 7.1 17.3 16.3 20.2 28.3 5.8 23.7-4.5 59.1-44 64.1-19.3 2.5-38.7 0.3-53.6 1.1z"/>
+     <path class="st0" d="m9.7 16.2h42.2c2.5 0 3.1 2.3 4.1 3.9 22.7 35 45.4 70.1 68.2 105.2 5 7.8 10.1 15.5 16.1 22.9v-18.8c0-36 0.2-71.9 0-107.9 0-4.5 1.3-5.6 5.6-5.5 8.8 0.3 17.7 0.3 26.5 0 4.4-0.2 5.9 0.9 5.9 5.6-0.2 30.6-0.1 61.3-0.1 91.9 0 26.8-0.1 53.6 0.1 80.5 0 4-1.1 5.1-5 5-13-0.2-26 0-39 0.1-2.7 0-4.6-0.6-6.2-3.1-39.1-58.8-78.1-117.6-117.1-176.4-0.6-0.9-1.7-1.7-1.3-3.4z"/>
+     <path class="st0" d="m530.6 50.1c-20.8 0-41.6-0.1-62.5 0.1-3.7 0-5-0.8-4.8-4.7 0.3-8.5 0.2-17 0-25.5-0.1-3 0.9-4 4-4 42.3 0.1 84.6 0.1 126.9 0 3 0 4.1 0.8 4 3.9-0.2 8.5-0.3 17 0 25.5 0.2 4.3-1.6 4.8-5.2 4.8-20.8-0.1-41.6-0.1-62.4-0.1z"/>
+     <path class="st0" d="m530.4 199.1c-20.7 0-41.3-0.1-62 0.1-3.7 0-5.3-0.6-5.2-4.9 0.3-8.3 0.2-16.7 0-25-0.1-3.1 0.7-4.3 4.1-4.3 42.2 0.1 84.3 0.2 126.4 0.1 3.4 0 4.2 1.1 4.2 4.3-0.2 8.3-0.3 16.7 0 25 0.1 3.7-0.9 4.8-4.7 4.8-20.8-0.2-41.8-0.1-62.8-0.1z"/>
+     <path class="st0" d="m242 138.1c0 18.8-0.1 37.7 0.1 56.5 0 3.4-0.7 4.7-4.4 4.6-8.5-0.3-17-0.2-25.5 0-2.9 0-4.1-0.6-4.1-3.8 0.1-38.2 0.1-76.3 0-114.5 0-3.2 1.2-3.9 4.1-3.8 8.5 0.2 17 0.2 25.5 0 3.7-0.1 4.4 1.2 4.4 4.6-0.2 18.7-0.1 37.6-0.1 56.4z"/>
+     <path class="st0" d="m518.7 123.1c-16.8 0-33.6-0.1-50.4 0.1-4.1 0.1-5-1.3-4.9-5.1 0.3-8.3 0.2-16.6 0-25-0.1-3.3 1-4.2 4.3-4.2 34 0.1 67.9 0.2 101.9 0.1 3.6 0 4.5 1.1 4.4 4.6-0.2 8.5-0.2 17 0 25.5 0.1 3.4-1.1 4.2-4.3 4.2-17.1-0.3-34.1-0.2-51-0.2z"/>
+     <path class="st0" d="m215.9 32.9l-0.4-5c3.4 3.6 5.7 1.8 8.6-0.6 3.3-2.6 4.3-5.6 3.9-10.6 5.2 4.7 5.3 10 5.1 15.3l-2.7 7.5c-0.3 1-0.4 2.1 0.9 2.4 1 0.2 1.5-0.5 1.7-1.3 0.8-3.8 1.9-2.2 3.1-0.3 3.7 5.8 2.3 16.2-2.8 20.7-0.8 0.7-1.7 1.4-2.6 0.7s-0.6-1.8-0.4-2.8c1.1-5.7-1.2-10.2-4.7-14.9-4.3 5.5-7.7 10.9-5.5 17.9v0.1c-8.2-3.8-11.1-11.7-7.3-19.5 1.5-3 4-5.8 3.1-9.6z"/>
+     <path class="st1" d="m215.9 32.9c0.9 3.8-1.6 6.6-3.1 9.7-3.8 7.8-0.9 15.8 7.3 19.5l0.5 0.4-0.4-0.4c-2.2-7.1 1.2-12.4 5.5-17.9 3.5 4.6 5.8 9.2 4.7 14.8-0.2 1-0.5 2.1 0.4 2.8s1.9 0 2.6-0.7c5.1-4.5 6.5-14.9 2.8-20.7-1.2-1.9-2.4-3.5-3.1 0.3-0.2 0.9-0.7 1.6-1.7 1.3-1.3-0.3-1.3-1.4-0.9-2.4l2.7-7.5c7.2 3.6 11 9.6 10.8 17.6-0.2 7.3-3.9 13-10.5 16.3-9 4.5-20 1-24.8-7.9-5.1-9.4-2.1-19.8 7.2-25.2zm9.7 15.3c-2.3 2.9-3.8 5.6-3.6 8.9 0.1 2.1 0.1 4.9 2.9 4.8s3.4-2.7 3.3-5.2c-0.1-3-1-5.9-2.6-8.5z"/>
+     <path class="st0" d="m225.6 48.2c1.6 2.6 2.5 5.5 2.6 8.6 0.1 2.5-0.5 5.1-3.3 5.2s-2.8-2.7-2.9-4.8c-0.1-3.4 1.3-6.1 3.6-9z"/>
+     <path class="st0" d="m220.1 62.1l0.4 0.4-0.4-0.4z"/>
+     </svg>
     </div>
 
     <div class="form-modal" id="modal-login">
@@ -31,6 +45,8 @@
       </div>
   
   </div>
+
+  <div id="SplashBackground"></div>
 
     <!-- <div class="modal" id="modal-login" style="display:none">
             <div class="modal-dialog" role="document">
