Got dark screen behind modal to work

--- a/ViBE-web-application/src/app/app.component.html
+++ b/ViBE-web-application/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   
 <app-splash-screen></app-splash-screen>
-   
+
 <div id="id_content">
 
   <div id="id_navbar">
@@ -11,6 +11,7 @@
 
   <div id="test"></div>
   <div id="id_map">
+      <div id="overlay"></div>
       <app-map></app-map>
   </div>
 
