--- a/ViBE-web-application/src/app/components/navbar/navbar.component.html
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.html
@@ -4,6 +4,8 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
+    <div id="overlay"></div>
   
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav mr-auto">
@@ -18,7 +20,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-warning" href="#"onclick="document.getElementById('modal-create').style.display='block'">Create Event</a>
+          <a class="nav-link text-warning" href="#"onclick="document.getElementById('modal-create').style.display='block';document.getElementById('overlay').style.display = 'block';">Create Event</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-warning" href="#myModal" data-toggle="modal">About</a>
